[gd_scene load_steps=27 format=3 uid="uid://d3tdqoloywmmg"]

[ext_resource type="Script" uid="uid://bodje56a2exsf" path="res://world/main.gd" id="1_85g3d"]
[ext_resource type="FontFile" uid="uid://84h2yrdfv5j6" path="res://ui/RustyHooks.ttf" id="2_a8y0u"]
[ext_resource type="Script" uid="uid://c1djhr360shxt" path="res://world/world.gd" id="2_o6xl0"]
[ext_resource type="Texture2D" uid="uid://dijgb626327ju" path="res://ui/game/UIBase.png" id="3_jkv2x"]
[ext_resource type="Shader" uid="uid://bg05amitbh15c" path="res://shaders/sky.gdshader" id="3_tipki"]
[ext_resource type="Script" uid="uid://bohpwmymnnrq2" path="res://world/camera_3d.gd" id="4_85g3d"]
[ext_resource type="Shader" uid="uid://decwbmks4clva" path="res://shaders/outline.gdshader" id="4_eb6dy"]
[ext_resource type="Texture2D" uid="uid://dss5isigikvm8" path="res://ui/game/UIIconsResourcest.png" id="4_jbj1t"]
[ext_resource type="Script" uid="uid://bhy2of5hk31q0" path="res://world/hexgrid.gd" id="5_choun"]
[ext_resource type="Texture2D" uid="uid://i1li7i8liyit" path="res://ui/mouse.png" id="10_choun"]
[ext_resource type="Texture2D" uid="uid://15uu11el6pbd" path="res://world/water.jpg" id="11_trceg"]

[sub_resource type="LabelSettings" id="LabelSettings_muem4"]
font = ExtResource("2_a8y0u")
font_size = 40
font_color = Color(0.25098, 0.00784314, 0, 1)
shadow_size = 10
shadow_color = Color(0.776471, 0.47451, 0.223529, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tipki"]
frequency = 0.0256

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tipki"]
noise = SubResource("FastNoiseLite_tipki")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o6xl0"]
shader = ExtResource("3_tipki")
shader_parameter/day_top_color = Color(0.1, 0.6, 1, 1)
shader_parameter/day_bottom_color = Color(0.4, 0.8, 1, 1)
shader_parameter/sunset_top_color = Color(0.7, 0.75, 1, 1)
shader_parameter/sunset_bottom_color = Color(1, 0.5, 0.7, 1)
shader_parameter/night_top_color = Color(0.02, 0, 0.04, 1)
shader_parameter/night_bottom_color = Color(0.1, 0, 0.2, 1)
shader_parameter/horizon_color = Color(0, 0.7, 0.8, 1)
shader_parameter/horizon_blur = 0.05
shader_parameter/sun_color = Color(10, 8, 1, 1)
shader_parameter/sun_sunset_color = Color(10, 0, 0, 1)
shader_parameter/sun_size = 0.2
shader_parameter/sun_blur = 10.0
shader_parameter/moon_color = Color(1, 0.95, 0.7, 1)
shader_parameter/moon_size = 0.06
shader_parameter/moon_blur = 0.1
shader_parameter/clouds_edge_color = Color(0.8, 0.8, 0.98, 1)
shader_parameter/clouds_top_color = Color(1, 1, 1, 1)
shader_parameter/clouds_middle_color = Color(0.92, 0.92, 0.98, 1)
shader_parameter/clouds_bottom_color = Color(0.83, 0.83, 0.94, 1)
shader_parameter/clouds_speed = 2.0
shader_parameter/clouds_direction = 0.2
shader_parameter/clouds_scale = 1.0
shader_parameter/clouds_cutoff = 0.3
shader_parameter/clouds_fuzziness = 0.5
shader_parameter/clouds_weight = 0.0
shader_parameter/clouds_blur = 0.25
shader_parameter/stars_speed = 1.0
shader_parameter/overwritten_time = 0.0

[sub_resource type="Sky" id="Sky_85g3d"]
sky_material = SubResource("ShaderMaterial_o6xl0")

[sub_resource type="Environment" id="Environment_h2yge"]
background_mode = 2
sky = SubResource("Sky_85g3d")
tonemap_mode = 2
tonemap_exposure = 0.7
tonemap_white = 1.5
glow_intensity = 1.0
glow_map = SubResource("NoiseTexture2D_tipki")
fog_mode = 1
fog_light_energy = 5.11
fog_density = 1.0
fog_sky_affect = 0.0
fog_height = 0.1
fog_height_density = 0.1
fog_depth_begin = 8.0
fog_depth_end = 2890.1
volumetric_fog_density = 1.0
volumetric_fog_albedo = Color(0.738881, 0.789871, 1, 1)
volumetric_fog_detail_spread = 1.1487
volumetric_fog_sky_affect = 0.0
adjustment_enabled = true
adjustment_brightness = 1.5
adjustment_contrast = 0.9
adjustment_saturation = 1.2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_1bvp3"]
auto_exposure_speed = 0.01
dof_blur_far_distance = 60.0
dof_blur_far_transition = 200.0
dof_blur_near_distance = 0.37
dof_blur_amount = 0.05

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eb6dy"]
render_priority = 0
shader = ExtResource("4_eb6dy")
shader_parameter/zNear = 0.05
shader_parameter/zFar = 100.0
shader_parameter/enable_outline = true
shader_parameter/outline_color = Color(0.0509804, 0.168627, 0.270588, 1)
shader_parameter/outline_thickness = 1.0
shader_parameter/enable_color_limit = true
shader_parameter/color_levels = 8
shader_parameter/enable_color_palette = true
shader_parameter/color1 = Color(0.94, 0.79524, 0.6768, 1)
shader_parameter/color2 = Color(0.941176, 0.796078, 0.678431, 1)
shader_parameter/color3 = Color(0.71, 0.568, 0.426, 1)
shader_parameter/color4 = Color(0.2752, 0.43, 0.30358, 1)
shader_parameter/color5 = Color(0.266667, 0.317647, 0.384314, 1)
shader_parameter/color6 = Color(0.266667, 0.317647, 0.384314, 1)
shader_parameter/color7 = Color(0.0509804, 0.168627, 0.270588, 1)
shader_parameter/color8 = Color(0.08, 0.0756, 0.0752, 1)
shader_parameter/enable_dithering = false
shader_parameter/dither_strength = 0.508

[sub_resource type="QuadMesh" id="QuadMesh_trceg"]
material = SubResource("ShaderMaterial_eb6dy")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a8y0u"]
shading_mode = 0
albedo_color = Color(0.308769, 0.308769, 0.308769, 1)
albedo_texture = ExtResource("11_trceg")
uv1_scale = Vector3(100, 100, 100)
uv1_offset = Vector3(0.94, -0.47, 0.23)
uv1_triplanar_sharpness = 0.00680117

[sub_resource type="PlaneMesh" id="PlaneMesh_lquwl"]
material = SubResource("StandardMaterial3D_a8y0u")
size = Vector2(1000, 1000)

[sub_resource type="BoxShape3D" id="BoxShape3D_lquwl"]
size = Vector3(2000, 0.5, 2000)

[sub_resource type="Animation" id="Animation_272bh"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroTransition/ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.0980392, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroTransition/ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.254902, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IntroTransition/ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.388235, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IntroTransition/ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SubViewportContainer/SubViewport/world/Node3D/Camera3D:fov")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(60, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_7mycd"]
resource_name = "start"
length = 4.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IntroTransition/ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.25098, -0.25, 0, 0.25, 0, 0.25098, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.55, 2.26667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IntroTransition/ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.00392157, -0.25, 0, 0.25, 0, 0.00392157, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.55, 2.26667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IntroTransition/ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.55, 2.26667)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IntroTransition/ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.55, 2.26667)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SubViewportContainer/SubViewport/world/Node3D/Camera3D:fov")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(2, 2),
"points": PackedFloat32Array(101.5, 0, 0, 1.5, 0, 55.5, -1.5, 0, 0, 0),
"times": PackedFloat32Array(0.0666667, 2.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5vw27"]
_data = {
&"RESET": SubResource("Animation_272bh"),
&"start": SubResource("Animation_7mycd")
}

[node name="Node" type="Node"]
process_mode = 3
script = ExtResource("1_85g3d")

[node name="IntroTransition" type="CanvasLayer" parent="."]
layer = 11
visible = false

[node name="ColorRect" type="ColorRect" parent="IntroTransition"]
z_index = 8
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0980392, 0.254902, 0.388235, 1)

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="Label" type="Label" parent="UI"]
z_index = 11
offset_top = 80.0
offset_right = 120.0
offset_bottom = 174.0
text = "LALA"
label_settings = SubResource("LabelSettings_muem4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="UI"]
z_index = 11
offset_top = 248.0
offset_right = 120.0
offset_bottom = 342.0
text = "LALA"
label_settings = SubResource("LabelSettings_muem4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="UI"]
z_index = 11
offset_top = 376.0
offset_right = 120.0
offset_bottom = 470.0
text = "LALA"
label_settings = SubResource("LabelSettings_muem4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="UI"]
z_index = 11
offset_top = 544.0
offset_right = 120.0
offset_bottom = 638.0
text = "LALA"
label_settings = SubResource("LabelSettings_muem4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite0002" type="Sprite2D" parent="UI"]
z_index = 7
position = Vector2(960, 540)
scale = Vector2(6, 6)
texture = ExtResource("3_jkv2x")

[node name="Sprite0004" type="Sprite2D" parent="UI"]
z_index = 7
position = Vector2(960, 540)
rotation = 3.14159
scale = Vector2(6, 6)
texture = ExtResource("3_jkv2x")

[node name="Sprite0003" type="Sprite2D" parent="UI"]
z_index = 7
position = Vector2(960, 540)
scale = Vector2(6, 6)
texture = ExtResource("4_jbj1t")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
z_index = -4
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(1920, 1080)
size_2d_override = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="world" type="Node3D" parent="SubViewportContainer/SubViewport"]
process_mode = 1
script = ExtResource("2_o6xl0")
daynight_time = 10.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewportContainer/SubViewport/world"]
environment = SubResource("Environment_h2yge")
camera_attributes = SubResource("CameraAttributesPractical_1bvp3")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SubViewportContainer/SubViewport/world"]
transform = Transform3D(0.912543, -0.407199, -0.0380942, 0.251316, 0.484838, 0.83772, -0.322647, -0.774031, 0.544772, 0, 0, 0)
light_energy = 0.5
shadow_enabled = true
shadow_blur = 2.0

[node name="Hexgrid" type="Node3D" parent="SubViewportContainer/SubViewport/world"]
script = ExtResource("5_choun")
grid_size = 100
noise_roughness = 0.07

[node name="Node3D" type="Node3D" parent="SubViewportContainer/SubViewport/world"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0)
script = ExtResource("4_85g3d")

[node name="Camera3D" type="Camera3D" parent="SubViewportContainer/SubViewport/world/Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 4, 0)
current = true
fov = 60.0
size = 6.74
near = 0.001

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/world/Node3D/Camera3D"]
cast_shadow = 0
mesh = SubResource("QuadMesh_trceg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewportContainer/SubViewport/world"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, 0.0536218, 0)
mesh = SubResource("PlaneMesh_lquwl")

[node name="StaticBody3D" type="StaticBody3D" parent="SubViewportContainer/SubViewport/world"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SubViewportContainer/SubViewport/world/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4822, 0)
shape = SubResource("BoxShape3D_lquwl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5vw27")
}
autoplay = "start"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 999
texture = ExtResource("10_choun")

[node name="ButtonBoundingBox" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 128.0

[node name="Button" type="Button" parent="ButtonBoundingBox"]
layout_mode = 0
offset_left = 144.0
offset_right = 397.0
offset_bottom = 127.0
text = "Return To Base"

[node name="Button2" type="Button" parent="ButtonBoundingBox"]
layout_mode = 0
offset_left = 396.0
offset_right = 649.0
offset_bottom = 127.0
text = "Scouts"

[node name="Button3" type="Button" parent="ButtonBoundingBox"]
layout_mode = 0
offset_left = 650.0
offset_right = 903.0
offset_bottom = 127.0
text = "Gatherer"

[node name="Button4" type="Button" parent="ButtonBoundingBox"]
layout_mode = 0
offset_left = 907.0
offset_right = 1160.0
offset_bottom = 127.0
text = "Invader"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mouse_entered" from="ButtonBoundingBox" to="SubViewportContainer/SubViewport/world" method="_on_button_bounding_box_mouse_entered"]
[connection signal="mouse_exited" from="ButtonBoundingBox" to="SubViewportContainer/SubViewport/world" method="_on_button_bounding_box_mouse_exited"]
[connection signal="pressed" from="ButtonBoundingBox/Button" to="SubViewportContainer/SubViewport/world" method="_on_button_pressed"]
[connection signal="pressed" from="ButtonBoundingBox/Button2" to="SubViewportContainer/SubViewport/world" method="_on_button_2_pressed"]
[connection signal="pressed" from="ButtonBoundingBox/Button3" to="SubViewportContainer/SubViewport/world" method="_on_button_3_pressed"]
[connection signal="pressed" from="ButtonBoundingBox/Button4" to="SubViewportContainer/SubViewport/world" method="_on_button_4_pressed"]
